# pici-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
models/: pici_classifier_model_max20_esp.json
models/10kestm_estp100_featuret211dim/: integration_and_excision_predictor.joblib  unknown_function_predictor.joblib
models/best_configs/: integration_and_excision_predictor.joblib
notebook/: cleaning.ipynb  dataset.ipynb  features.ipynb  heatmap.ipynb  heatmap_genome.ipynb  heatmap_segment.ipynb  pharokka.ipynb  pici_discovery.ipynb  prediction.ipynb  predictor.ipynb  train_function_predictor.ipynb  train_pici_predictor.ipynb
results/: cluster_sizes.csv  duplicate_picis.csv  picis_integrase_alpa.csv  picis_integrase_alpa_no_capsid.csv  predictors.md  protein_function_matrix.csv  protein_function_matrix_integrase_alpa_capsid.csv  protein_function_matrix_new_merged.csv  protein_function_matrix_new_unmerged.csv  protein_function_matrix_old.csv  proteins_AlpA.csv  proteins_all_function_counts.tsv  proteins_capsid.csv  proteins_integrases.csv
results/demonstration/: prediction_GCF_000009645.1.csv  prediction_known_phages_small_200_threshold_0.5.csv  prediction_known_segments.csv  prediction_known_segments_threshold_0.8.csv
results/pcat/: connector.csv  dna_rna_and_nucleotide_metabolism.csv  head_and_packaging.csv  integration_and_excision.csv  lysis.csv  moron_auxiliary_metabolic_gene_and_host_takeover.csv  other.csv  tail.csv  transcription_regulation.csv  unknown_function.csv
results/pharokka_output/: pharokka.tbl  (+10 more)
(+74 files in other folders)
